@@ -111,25 +111,22 @@ external get_raw_backtrace:
 external raise_with_backtrace: exn -> raw_backtrace -> 'a
   = "%raise_with_backtrace"
 
-type backtrace_slot =
+(* Disable warning 37: values are constructed in the runtime *)
+type[@warning "-37"] backtrace_slot =
   | Known_location of {
-      is_raise    : bool;
-      filename    : string;
-      line_number : int;
-      start_char  : int;
-      end_char    : int;
-      is_inline   : bool;
-      defname     : string;
+      is_raise   : bool;
+      filename   : string;
+      start_lnum : int;
+      start_char : int;
+      end_offset : int; (* Relative to beginning of start_lnum *)
+      end_lnum   : int;
+      end_char   : int; (* Relative to beginning of end_lnum line *)
+      is_inline  : bool;
+      defname    : string;
     }
   | Unknown_location of {
       is_raise : bool
     }
-
-(* to avoid warning *)
-let _ = [Known_location { is_raise = false; filename = "";
-                          line_number = 0; start_char = 0; end_char = 0;
-                          is_inline = false; defname = "" };
-         Unknown_location { is_raise = false }]
 
 external convert_raw_backtrace_slot:
   raw_backtrace_slot -> backtrace_slot = "caml_convert_raw_backtrace_slot"
@@ -158,7 +155,7 @@ let format_backtrace_slot pos slot =
       Some (sprintf "%s %s in file \"%s\"%s, line %d, characters %d-%d"
               (info l.is_raise) l.defname l.filename
               (if l.is_inline then " (inlined)" else "")
-              l.line_number l.start_char l.end_char)
+              l.start_lnum l.start_char l.end_offset)
 
 let print_exception_backtrace outchan backtrace =
   match backtrace with
@@ -208,6 +205,8 @@ type location = {
   line_number : int;
   start_char : int;
   end_char : int;
+  end_line : int;
+  end_col : int;
 }
 
 let backtrace_slot_location = function
@@ -215,9 +214,11 @@ let backtrace_slot_location = function
   | Known_location l ->
     Some {
       filename    = l.filename;
-      line_number = l.line_number;
+      line_number = l.start_lnum;
       start_char  = l.start_char;
-      end_char    = l.end_char;
+      end_char    = l.end_offset;
+      end_line    = l.end_lnum;
+      end_col     = l.end_char;
     }
 
 let backtrace_slot_defname = function
